<resources>
    <string name="app_name">Coffee Timer ☕</string>
    <string name="title_home">Home</string>
    <string name="title_timer">Timer</string>
    <string name="start_brewing">Start Brewing</string>
    <string name="tagline">Caffeinate. Rinse. Repeat.</string>
    <string name="choose_coffee_msg">Choose your favourite brew!</string>
    <string name="coffee_emoji">☕</string>
    <string name="select_coffee">Select your brew from the home screen, lay back and relax!</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
</resources>