<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="40dp">

    <!-- Title TextView -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tagline"
        android:textSize="22sp"
        android:textColor="@color/grey"
        android:layout_marginBottom="36dp"
        android:textStyle="bold" />

    <!-- Spinner for Coffee Type Selection -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_tile_background"
        android:padding="40dp"
        android:elevation="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_coffee_msg"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="7dp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/coffeeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:popupBackground="@color/coffee_secondary"
            android:popupElevation="15dp"
            android:spinnerMode="dropdown" />

        <!-- NumberPicker for Brew Time -->
        <NumberPicker
            android:id="@+id/brewTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp" />

        <!-- Button to Start Timer -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/coffee_primary"
                android:textColor="#DBDBDB"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/start_brewing" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coffee_emoji"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/startButton"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="30sp"
                android:layout_marginStart="24dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>
